--- a/0-intro.tex
+++ b/0-intro.tex
@@ -21,7 +21,7 @@ The number of nanoporous materials is potentially unlimited; for the metal--orga
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
 
-In this manuscript, I will start by a literature review on the screening methodologies that are applied to very different applications of nanoporous materials. It was an opportunity to explore the different techniques that are used in a variety of research fields to inspire the current work.\autocite{Ren_2022} For instance, I proposed another angle to the screening of the separation process by breaking down the selectivity metric into thermodynamic quantities such as the enthalpy, the free energy and the entropy. This study based on time-consuming calculations revealed the effects of pressure, the thermodynamic nature of the selectivity and some structure--property relationships.\autocite{Ren_2021} To further improve the selectivity screening for Xe/Kr separation, I introduced different simulation tools to evaluate the adsorption performance of a nanoporous material.\autocite{Ren_2023} This opened up new opportunities for the development of computationally cheaper and more accurate energy descriptors for the ML prediction of Xe/Kr selectivity at ambient pressure.\autocite{Ren_2023_ml} Through this work, faster and accurate evaluation tools of the Xe/Kr separation have been developed, which potentially enables the improvement of the physical description of the system. 
+This manuscript starts with a literature review on the screening methodologies that are applied to very different applications of nanoporous materials. It was an opportunity to explore the different techniques that are used in a variety of research fields to inspire the current work.\autocite{Ren_2022} For instance, the research focus will be oriented toward the screening of the separation process by breaking down the selectivity metric into thermodynamic quantities such as the enthalpy, the free energy and the entropy. This study based on time-consuming calculations revealed the effects of pressure, the thermodynamic nature of the selectivity and some structure--property relationships.\autocite{Ren_2021} To further improve the selectivity screening for Xe/Kr separation, different simulation tools were introduced to evaluate the adsorption performance of a nanoporous material.\autocite{Ren_2023} This opened up new opportunities for the development of computationally cheaper and more accurate energy descriptors for the ML prediction of Xe/Kr selectivity at ambient pressure.\autocite{Ren_2023_ml} Through this work, faster and accurate evaluation tools of the Xe/Kr separation have been developed, which potentially enables the improvement of the physical description of the system. 
 
 As previously mentioned, the gas capacity of the nanoporous materials and the transport properties inside them are also very important metrics to evaluate the industrial separation process. The gas capacity can be obtained by GCMC calculations, and alternative methodologies were not thoroughly studied in this thesis. The fifth chapter of this thesis rather focuses on the determination of transport properties and alternative methods of evaluating it. Finally, some perspectives on the physical description of the system (flexibility and polarizability) are provided in the final chapter.
 
