--- a/1-screening.tex
+++ b/1-screening.tex
@@ -40,8 +40,8 @@ The process of particles or molecules adhering on a surface is called adsorption
 \footnotetext[1]{Available on Github at \url{https://github.com/CorySimon/XeKrMOFAdsorptionSurv}}
 
 %pore size
-Most of the materials studied in my thesis have pores with sizes around the nanometer scale, therefore called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here, I will use a single terminology -- nanopore -- to encompass all pores that are a few nanometers or less in size. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if the structure of the nanoporous material has already been resolved using X-ray diffraction on crystallized porous solids. This method provides the most accurate determination of the PSD, assuming the structure is perfectly rigid and crystalline, allowing for a single set of structural data to characterize it. Other experimental methods rely on assumptions, model systems (e.g.,\ cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can be used to evaluate the PSD.\autocite{Haynes_1973} Another
-approach is the Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract information about the PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} In my thesis, I will primarily rely on computationally analyzing experimental structures to deduce pore sizes and other geometric characteristics. 
+Most of the materials studied in my thesis have pores with sizes around the nanometer scale, therefore called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here, a single terminology -- nanopore -- will be used to encompass all pores that are a few nanometers or less in size. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if the structure of the nanoporous material has already been resolved using X-ray diffraction on crystallized porous solids. This method provides the most accurate determination of the PSD, assuming the structure is perfectly rigid and crystalline, allowing for a single set of structural data to characterize it. Other experimental methods rely on assumptions, model systems (e.g.,\ cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can be used to evaluate the PSD.\autocite{Haynes_1973} Another
+approach is the Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract information about the PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} My thesis will primarily rely on computationally analyzing experimental structures to deduce pore sizes and other geometric characteristics. 
 
 %volume / porosity
 The pore volume of nanoporous materials represents the combined volume of both ``closed''
@@ -293,7 +293,7 @@ After this quick overview of the different screening studies in the field of xen
 
 \section{Separation of xenon from krypton}
 
-In this section, I will show how the above-mentioned screening methodologies can help us understand the origins of the Xe/Kr separation and identify promising materials for industrial applications. 
+This section will be dedicated on how the above-mentioned screening methodologies can help us understand the origins of the Xe/Kr separation and identify promising materials for industrial applications. 
 
 \subsection{Industrial applications}\label{sct:industrial}
 
@@ -336,7 +336,7 @@ More recently, Li et al.\ proposed a rigid squarate-based MOF with ``perfect por
 
 \subsection{From the computer to the test tube}
 
-To connect back this work to computational screenings, I am now going to present one of the rare cases of direct contribution of high-throughput screenings to the lab testing of a material. In 2015, Simon et al.\autocite{Simon_2015} analyzed the Nanoporous Materials Genome,\autocite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. This study led to the rediscovery of SBMOF-1, a promising nanoporous material that was presented one year later.\autocite{Banerjee_2016}
+To connect back this work to computational screenings, one of the rare cases of direct contribution of high-throughput screenings to the lab testing of a material will be presented here. In 2015, Simon et al.\autocite{Simon_2015} analyzed the Nanoporous Materials Genome,\autocite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. This study led to the rediscovery of SBMOF-1, a promising nanoporous material that was presented one year later.\autocite{Banerjee_2016}
 
 It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multiscale modeling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy\ (i.e.,\ the average energy\ of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks, which suggests the key role of the chemical nature of the cavities.
 
@@ -365,7 +365,7 @@ Moreover, the transferability of the methodology to a broad range of materials i
 % ML
 The development of ML-assisted screenings is paired with the advances in data science techniques and algorithms. Recent advances in deep learning have enabled the development of transformer-based (the technology at the foundation of ChatGPT) machine learning models to predict adsorption properties.\autocite{Kang_2023,Cao_2023} More importantly, the construction of descriptors tailored to the many possible applications is also an ongoing work. This construction work cannot be dissociated from the physical and chemical intuition of the scientists. Topological, chemical, electronic and other descriptors have been developed on top of the more common geometrical and thermodynamic descriptors, which displays the importance of strong physical chemistry knowledge. Recently Shi et al.\ highlighted the key role of energy histograms in predicting adsorption properties.\autocite{Shi_2023}
 The discovery of novel relevant descriptors remains the main lever for increased performance of the ML models and is closely related to a rigorous theoretical work.
-For these reasons, I worked during this thesis on more accurate and faster ways of calculating these interaction energies to extract valuable energy/thermodynamic descriptors.
+For these reasons, this thesis focuses on more accurate and faster ways of calculating these interaction energies to extract valuable energy/thermodynamic descriptors.
 
 
 The development of databases is another key aspect in the promotion of data science in the field of materials science in general, and nanoporous materials chemistry in particular. The diversity of materials, the inclusion of experimental data (successful or failed), the addition of understudied classes of materials (e.g.,\ amorphous) are all key aspects to upgrade the existing database. Even if existing attempts to create a centralized database have been initiated by the materials project,\autocite{MaterialsProject} this database does not contain all the existing information on each material. Furthermore, this high amount of data will need to be efficiently explored, and non-supervise deep learning algorithms have been developed to do so.\autocite{Park_2023} Coupled with synthesis robot, these methods can navigate through the unexplored databases to find the few most interesting candidates for a given targeted application.
