--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -639,7 +639,7 @@ where $q$ is the adsorbed quantity of a mono-component gas, $K$ is the adsorptio
 \end{equation}
 where $q$ is the total loading of a given mono-component gas, $K_1$ and $K_2$ are the adsorption equilibrium constants in the respective sites, $\alpha\e{2}$ is the proportion of secondary sites, and $P$ is the pressure.
   
-This section will study a few examples of the category of materials where ambient-pressure selectivity is close to (or even higher than) the low-pressure value. For the material VOKJIQ\todo{description from SI}, the selectivity increases by a factor of $1.5$ between low and ambient pressure. Upon closer examination, it is observed that the adsorption enthalpy of xenon $\Delta\e{ads}H\ex{Xe}$ decreases from $-53.9$\,\si{\kilo\joule\per\mol} to $-61.1$\,\si{\kilo\joule\per\mol}, whereas the adsorption enthalpy for krypton $\Delta\e{ads}H\ex{Kr}$ decreases from $-38.2$\,\si{\kilo\joule\per\mol} to $-44.5$\,\si{\kilo\joule\per\mol} (\emph{cf.} Table~\ref{tbl:thermo}). 
+This section will study a few examples of the category of materials where ambient-pressure selectivity is close to (or even higher than) the low-pressure value. For the material VOKJIQ,\autocite{VOKJIQ} an open-framework aluminophosphate, [HAl$_3$P$_3$O$_{13}$]$\cdot$C$_3$NH$_{10}$, the selectivity increases by a factor of $1.5$ between low and ambient pressure. Upon closer examination, it is observed that the adsorption enthalpy of xenon $\Delta\e{ads}H\ex{Xe}$ decreases from $-53.9$\,\si{\kilo\joule\per\mol} to $-61.1$\,\si{\kilo\joule\per\mol}, whereas the adsorption enthalpy for krypton $\Delta\e{ads}H\ex{Kr}$ decreases from $-38.2$\,\si{\kilo\joule\per\mol} to $-44.5$\,\si{\kilo\joule\per\mol} (\emph{cf.} Table~\ref{tbl:thermo}). 
 
 This phenomenon of increased stability of the adsorption sites upon loading is not commonly observed in nanoporous materials for rare gas adsorption. It can be attributed to a cooperative effect between the adsorbed molecules, where the interaction between the adsorbed xenon molecules is more favorable than that between the adsorbed krypton molecules. This preference stems from the stabilization due to the interatomic distance within the pores, which closely matches the energy well for favorable Lennard-Jones potential for xenon-xenon interactions, unlike the case for krypton-krypton interactions (where the distance exceeds \SI{4.2}{\angstrom}; see Figure~\ref{fgr:LJ}).
 
