--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -5,16 +5,16 @@
 
 This thesis explored different approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in our literature review,\autocite{Ren_2022} a high-throughput screening focus on one specific property of the nanoporous material in order to find the best material for a targeted application. There are three main challenges for screenings: (i) the accuracy of the methods used to characterize the key properties at play, (ii) the experimental/computation time required to determine those properties, and (iii) other properties that are often neglected can be added to the evaluation of the performance. For instance, to evaluate the separation performance, one usually uses the adsorption selectivity. 
 
-The second chapter focused on different methodologies to evaluate this selectivity in different physical conditions, and how a screening can draw a realistic picture of a selective material.\autocite{Ren_2021} The influence of the composition, the pressure and the some structural descriptors were studied thoroughly. To achieve maximal selectivity, the pore size needs to be tailored to the size of a xenon. The Xe/Kr separation can be approximaterly described by the xenon affinity with the material, and this affinity is enthalpic in nature. The effect of a higher partial pressure of xenon results in the saturation of the most favorable pores for xenon adsorption, which is at the origin of the observed selectivity decrease in some materials.
+The second chapter focused on different methodologies to evaluate this selectivity in different physical conditions, and how a screening can draw a realistic picture of a selective material.\autocite{Ren_2021} The influence of the composition, the pressure and the some structural descriptors were studied thoroughly. To achieve maximal selectivity, the pore size needs to be tailored to the size of a xenon. The Xe/Kr separation can be approximately described by the xenon affinity with the material, and this affinity is enthalpic in nature. The effect of a higher partial pressure of xenon results in the saturation of the most favorable pores for xenon adsorption, which is at the origin of the observed selectivity decrease in some materials.
  
-Because of the prominent role of the enthalpic term, the third chapter introduced faster sampling techniques to evaluate the selectivity in the infinite-dilution case. Along with the most used Widom insertion, this work described different biased sampling techniques such as the Voronoi sampling or the surface sampling (RAESS). The RAESS algorithm\autocite{Ren_2023} were proven to be faster than a Widom insertion and much more accurate than the previously introduced Voronoi energy\autocite{Simon_2015} on the CoRE MOF 2019 database. Finally, an unbiased sampling based on a symmetric grid (GrAED) was introduced to provide valuable energy descriptors to design finely tuned energetic descriptors. The GrAED algorithm provides interesting descriptors that can be further used in an ML modeling, for instance.
+Because of the prominent role of the enthalpic term, the third chapter introduced faster sampling techniques to evaluate the selectivity in the infinite-dilution case. Along with the most used Widom insertion, this work described various biased sampling techniques such as the Voronoi sampling or the surface sampling (RAESS). The RAESS algorithm\autocite{Ren_2023} were proven to be faster than a Widom insertion and much more accurate than the previously introduced Voronoi energy\autocite{Simon_2015} on the CoRE MOF 2019 database. Finally, an unbiased sampling based on a symmetric grid (GrAED) was introduced to provide valuable energy descriptors to design finely tuned energetic descriptors. The GrAED algorithm provides interesting descriptors that can be further used in an ML modeling, for instance.
 These techniques can be used in a multiscale screening to faster single out interesting materials for more time-consuming calculations or experiments. 
 
 To get a GCMC level of accuracy combined with a speed comparable with faster low-dilution calculations, an ML model based on structural, chemical and energetic descriptors was proposed in the fourth chapter.\autocite{Ren_2023_ml} This model was proven to be very accurate and could be used to provide GCMC grade evaluations with minimal computation resources. The interpretation of this ML model opened up new ways of tackling the structure-property relationship through other methods than the standard correlation analyses. 
 
-Up until now, thermodynamic properties calculated under rather simple assumptions has been thoroughly studied using multiple correlation analysis and the development of multiple performance evaluation tools. To consider different key properties, the transport properties were studied in the fifth chapter. Different methodologies were explored: (i) the most physically accurate but also the slowest method is based on molecular dynamics of at least a few tens of nanoseconds; (ii) the transition state based methodologies that approximate the diffusion process by hopping from one site to another; (iii) Finally the ML-based method that uses some descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. Using these calculated transport properties, the screening uncovered selective materials without kinetic limitations (that also happens to have high xenon capacity), which confirms the multivariate nature of the screening process since these type of materials would be much more productive with more output at each pressure-swing cycle and also faster cycles (in a PSA process). 
+Up until now, thermodynamic properties calculated under rather simple assumptions have been thoroughly studied using multiple correlation analysis and the development of multiple performance evaluation tools. To consider different key properties, the transport properties were studied in the fifth chapter. Different methodologies were explored: (i) the most physically accurate but also the slowest method is based on molecular dynamics of at least a few tens of nanoseconds; (ii) the transition state based methodologies that approximate the diffusion process by hopping from one site to another; (iii) Finally, the ML-based method that uses some descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. Using these calculated transport properties, the screening uncovered selective materials without kinetic limitations (that also happens to have high xenon capacity), which confirms the multivariate nature of the screening process since these types of materials would be much more productive with more output at each pressure-swing cycle and also faster cycles (in a PSA process). 
 
-The final chapter opens perspectives on studies of other physical properties of the material, neglected through out this thesis, such as the flexibility of the material or the interactions induced by charged atoms or polar groups. The polarization effect should be directly integrated in a screening to identify materials with much higher experimental selectivity as suggested by the characteristics of the recent top-performing materials for Xe/Kr separation.\autocite{Li_2019,Pei_2022} And the flexibility of the material could explain some theory--experiment discrepancies that would otherwise go unsolved, which proves the more accurate description of flexibility-aware molecular simulations.
+The final chapter opens perspectives on studies of other physical properties of the material, neglected throughout this thesis, such as the flexibility of the material or the interactions induced by charged atoms or polar groups. The polarization effect should be directly integrated in a screening to identify materials with much higher experimental selectivity as suggested by the characteristics of the recent top-performing materials for Xe/Kr separation.\autocite{Li_2019,Pei_2022} And the flexibility of the material could explain some theory--experiment discrepancies that would otherwise go unsolved, which proves the more accurate description of flexibility-aware molecular simulations.
 
  
 \begin{center}
@@ -24,7 +24,7 @@ The final chapter opens perspectives on studies of other physical properties of 
 
 This work opens perspectives for faster screening strategies of separation properties in different physical and chemical conditions. Moreover, the different tools developed in this thesis can be used to easily integrate transport properties in future screening for gas separation in nanoporous materials. By integrating these tools with the recently emerging idea of Digital Reticular Chemistry,\autocite{Lyu_2020} new perspectives on material design could be envisioned. 
 
-The different methodologies developed also enable the integration of under-studied properties that have a key role in the industrial process of xenon/krypton separation. By combing the speed-up methods that I introduced throughout this thesis, it is now possible to incorporate usually neglected physical phenomena in the screening procedure. The faster sampling of the adsorption energies can serve as building ground to model a flexible material through a snapshot approach, for example\autocite{Witman_2017}. The evaluation of the induced energy\autocite{Lachet_1998} can also be integrated in the evaluation tools used throughout this thesis. 
+The different methodologies developed also enable the integration of understudied properties that have a key role in the industrial process of xenon/krypton separation. By combing the faster methods that introduced throughout this thesis, it is now possible to incorporate usually neglected physical phenomena in the screening procedure. The faster sampling of the adsorption energies can serve as building ground to model a flexible material through a snapshot approach, for example\autocite{Witman_2017}. The evaluation of the induced energy\autocite{Lachet_1998} can also be integrated in the evaluation tools used throughout this thesis. 
 
 
 
